# Spacex

Prompts/: TravelPrompt
SpaceX/: CONTEXT.md  DEMO_GUIDE.md  DIAGRAMS.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.md  START_HERE.md  pyproject.toml  start_backend.bat  test_system.py  testing.py
SpaceX/backend/: config.py  main.py
SpaceX/backend/agents/: knowledge_agent.py  optimizer_agent.py  orchestrator.py  validator_guardrail.py  weather_agent.py
SpaceX/backend/data/: init_db.py  init_vector_db.py  stellar_voyage.db
SpaceX/backend/mcp/: weather_mcp_server.py
SpaceX/backend/utils/: llm_client.py
SpaceX/chroma_db/: chroma.sqlite3
SpaceX/frontend/: index.html
