[project]
name = "travel-itinerary-operator"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "langchain-openai",
    "langchain",
    "langgraph",
    "langchain-community",
    "chromadb",
    "fastapi",
    "uvicorn",
    "python-dotenv",
    "pydantic",
    "httpx",
    "requests",
    "certifi",
    "numpy",
    "urllib3",
    "python-multipart",
    "mcp",
]
